@@ -3,25 +3,13 @@ import com.fastcgi.FCGIInterface;
 import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
-import java.util.Locale;
-
+//TODO плашку на y на фронте по значениям
 public class Server {
-
-    private static final String RESPONSE_TEMPLATE = """
-            Content-Type: application/json
-            Access-Control-Allow-Origin: *
-            Content-Length: %d
-
-            %s""";
-
-    private static final String OK_CODE = "HTTP/2 200 OK\n";
-    private static final String ERR_CODE = "HTTP/2 400 Bad Request\n";
-
     public static void main(String[] args) {
 
         var logger = ServerLogger.getLogger("main");
 
-        logger.info("server started");
+        logger.info("server started!!!!!!!!!!!!!!!!!!!!!!!");
         //var fcgiInterface = new FCGIInterface();
 
         while (new FCGIInterface().FCGIaccept() >= 0) {
@@ -38,57 +26,40 @@ public class Server {
                 var response = new Response(request);
                 logger.info("response created");
 
-//                var content = """
-//                     {
-//
-//                     "x": %d,
-//                     "y": %f,
-//                     "r": %d,
-//                     "hit": %s,
-//                     "currTime": %s,
-//                     "execTime": %s
-//
-//                     }""".formatted(response.getX(), response.getY(), response.getR(), response.getHit(),
-//                        response.getCurrentTime(),
-//                        String.format( "%.4f",
-//                                (double) (System.currentTimeMillis() - response.getExecutionStart())/1000));
-//
-//                var httpResponse = """
-//                     HTTP/1.1 200 OK
-//                     Content-Type: text/html
-//                     Content-Length: %d
-//
-//                     %s
-//                     """.formatted(content.getBytes(StandardCharsets.UTF_8).length, content);
-                // System.out.println(httpResponse);
+                var content = """
+                     {
+                         "x": "%d",
+                         "y": "%f",
+                         "r": "%d",
+                         "hit": "%s",
+                         "currTime": "%s",
+                         "execTime": "%s"
+                     }""".formatted(response.getX(), response.getY(), response.getR(), response.getHit(),
+                        response.getCurrentTime(),
+                        String.format( "%.4f",
+                                (double) (System.currentTimeMillis() - response.getExecutionStart())/1000));
 
-                sendJsonOK(String.format(Locale.US,
-                    "{\"x\": %d, \"y\": %f, \"r\": %d, \"hit\": %s, \"currTime\": %s, \"execTime\": %s}",
-                    response.getX(), response.getY(), response.getR(), response.getHit(),
-                    response.getCurrentTime(),
-                    String.format( "%.4f",
-                            (double) (System.currentTimeMillis() - response.getExecutionStart())/1000)
-                    )
-                );
+                var httpResponse = """
+                     HTTP/1.1 200 OK
+                     Content-Type: application/json
+                     Access-Control-Allow-Origin: *
+                     Content-Length: %d
+
+                     %s
+                     """.formatted(content.getBytes(StandardCharsets.UTF_8).length, content);
+                 System.out.println(httpResponse);
+
                 logger.info("response sent");
                 logger.info(response.toString());
 
             } catch (Exception e) {
                 logger.info("error occurred" + e.getMessage());
-                //System.out.println(Response.badResponse("400 Bad request", e.getMessage()));
-                sendJsonErr(String.format("{\"error\": %s}", e));
+                System.out.println(Response.badResponse("400 Bad request", e.getMessage()));
+                //sendJsonErr(String.format("{\"error\": %s}", e));
             }
         }
 
         logger.info("server is dead");
-    }
-
-    private static void sendJsonOK(String data) {
-        System.out.printf(OK_CODE + (RESPONSE_TEMPLATE) + "%n", data.getBytes(StandardCharsets.UTF_8).length, data);
-    }
-
-    private static void sendJsonErr(String data) {
-        System.out.printf(ERR_CODE + (RESPONSE_TEMPLATE) + "%n", data.getBytes(StandardCharsets.UTF_8).length, data);
     }
 
     private static String readRequestBody() throws IOException {
